# somehow-smartbridge-hackathon

./: .claudeignore  .gitignore  AI_GENERATE_MIGRATION.md  AI_SETUP_INSTRUCTIONS.md  AI_STATUS.md  CLAUDE.md  CLAUDE_API_SETUP.md  FRONTEND_AI_SIMPLIFICATION.md  GITIGNORE_GUIDE.md  INTEGRATION_GUIDE.md  INTEGRATION_SUMMARY.md  QUICKSTART.md  QUICK_START.md  QUICK_START_CLAUDE.md  README.md  SETUP_SUMMARY.md  main.py  start-all.bat  start-all.sh
backend/: .env.example  .gitignore  API_TESTING.md  BACKEND_DOCUMENTATION.md  MONGODB_SETUP.md  PROJECT_SUMMARY.md  README.md  TROUBLESHOOTING.md  api_docs.md  backend_readme.md  docker-compose.yml  load_dummy_data.py  main.py  populate_dummy_data.py  pyproject.toml  requirements-simple.txt  requirements.txt  start.bat  start.sh  test_endpoints.py  test_server.py
backend/agents/: budget_agent.py  goal_agent.py  intent_router.py  tax_agent.py
backend/app/: main.py  start.sh  test_api.py
backend/app/ai/: rag_pipeline.py
backend/app/config/: database.py  settings.py
backend/app/models/: chat.py  goal.py  investment.py  transaction.py  user.py
backend/app/schemas/: auth.py  goal.py  investment.py  transaction.py  user.py
backend/app/services/: finance_analyzer.py  (+2 more)
backend/config/: settings.py
backend/core/: auth.py  database.py  db_service.py  granite_api.py  granite_service.py  logger.py  response_cache.py  utils.py
backend/data/: sample_transactions.json
backend/models/: db_models.py  request_models.py  response_models.py
backend/routes/: __init__.py  auth_routes.py  base_routes.py  finance_routes.py
(+29 files in other folders)
